fix menu list on smaller devices + center list items

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -106,7 +106,7 @@
 
     padding: 1rem;
 
-    width: 80%;
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: flex-end;
@@ -136,7 +136,7 @@
 
       display: flex;
       justify-content: flex-start;
-      align-items: flex-start;
+      align-items: center;
       flex-direction: column;
 
       li {
